--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "start": "node src/index.js"
+  "start": "node src/index.js",
+  "postinstall":"prisma generate"
 },
 
-  "prisma": {
-    "seed": "node seed.js"
-  },
+  // "prisma": {
+  //   "seed": "node seed.js"
+  // },
   "keywords": [],
   "author": "",
   "license": "ISC",
