--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,22 +1,3 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "./src/index.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "./src/index.js",
-        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-        "headers": {
-          "Access-Control-Allow-Origin": "https://recipehub-rosy.vercel.app",
-          "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
-          "Access-Control-Allow-Headers": "Content-Type, Authorization",
-          "Access-Control-Allow-Credentials": "true"
-        }
-      }
-    ]
-  }
+  "version": 2
+}
