--- a/backend/package.json
+++ b/backend/package.json
@@ -4,19 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "start": "node src/index.js",
-  "postinstall":"prisma generate"
-},
-"prisma": {
-  "schema": "src/prisma/schema.prisma"
-},
+    "start": "node src/index.js",
+    "postinstall": "prisma generate"
+  },
+  "prisma": {
+    "schema": "src/prisma/schema.prisma"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.11.3",
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.8.2",
+    "@prisma/extension-accelerate": "^2.0.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cloudinary": "^1.41.3",
@@ -38,10 +39,9 @@
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "prisma": "^6.5.0"
+    "prisma": "^6.8.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
-    
   }
 }
