--- a/backend/package.json
+++ b/backend/package.json
@@ -38,10 +38,10 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "prisma": "^6.9.0"
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "prisma": "^6.10.0"
   }
 }
